# crl-stability-gap

./: .gitignore  main.py  pyproject.toml  pyrightconfig.json  requirement.txt  requirements.txt
cartpole/: args.py  benchmark.py  callbacks.py  continual.py  main.py
cartpole/benchmarks/: permuted_env_benchmark.py  wrappers.py
continual_world/: benchmark.py  callbacks.py  main.py
dispatch/: dispatch.sh  dispatch_cartpole.sh  dispatch_continualworld.sh  dispatch_projection.sh  dispatch_single_task.sh  dispatch_yaml.py  train.sh
dispatch/experiments/: fine_tune.sh
projection/: args.py  callbacks.py  common.py  main.py
projection/benchmarks/: inverted_pendulum_hard.py  projected_env_benchmark.py  wrappers.py
scripts/: common.py  compare_dqn.py  compute_final_performance.py  compute_metrics.py  compute_min_acc.py  compute_table_row.py  linear_grid.ipynb  linear_interpolation_grid.py  plot_iqm.py  run_plots.sh
scripts/table_configs/: ddpg_ip_bc.yaml  ddpg_ip_ji.yaml  dqn_cp_bc.yaml  dqn_cp_ji.yaml  sac_ip_bc.yaml  sac_ip_ji_ent.yaml  sacd_cp_bc.yaml  sacd_cp_ji.yaml
single_task/: args.py  main.py  wrappers.py
src/: args.py  benchmark.py  callbacks.py  common.py  integration.py  main.py  policy.py  wrappers.py
stable_baselines3/common/: base_class.py  buffers.py  distributions.py  logger.py  off_policy_algorithm.py  policies.py  torch_layers.py  type_aliases.py
stable_baselines3/continual/: __init__.py  continual_learning.py  off_policy_joint_incremental.py  pc_grad.py
stable_baselines3/ddpg/: ddpg_bc.py  ddpg_fine_tune.py  ddpg_joint_incremental.py
(+160 files in other folders)
