[project]
name = "crl-stability-gap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium[classic-control]>=1.2.3",
    "matplotlib>=3.10.8",
    "metaworld>=3.0.0",
    "moviepy>=2.2.1",
    "opencv-python>=4.13.0.92",
    "pandas>=2.3.3",
    "pyplotlib>=0.0.56",
    "rich>=14.3.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "triton>=3.6.0",
    "wandb>=0.24.2",
]
